--- a/common/src/main/res/values/themes.xml
+++ b/common/src/main/res/values/themes.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <style name="Theme.NovaFoundation.Nova" parent="Theme.MaterialComponents.NoActionBar">
         <item name="colorPrimary">@color/colorPrimary</item>
@@ -38,6 +38,8 @@
         <!--fonts-->
 
         <item name="colorAccent">@color/accentBlue</item>
+
+        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
     </style>
 
     <style name="WhiteOverlay" parent="ThemeOverlay.AppCompat">
