--- a/feature-wallet-impl/src/main/res/layout/fragment_receive.xml
+++ b/feature-wallet-impl/src/main/res/layout/fragment_receive.xml
@@ -1,53 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    android:orientation="vertical"
-    tools:background="@color/black">
+    tools:background="@color/black"
+    android:layout_height="match_parent">
 
-    <io.novafoundation.nova.common.view.Toolbar
-        android:id="@+id/novaToolbar"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:homeButtonIcon="@drawable/ic_close"
-        app:iconRight="@drawable/ic_share_arrow_white_24"
-        app:titleText="@string/wallet_asset_receive" />
+        android:fitsSystemWindows="true"
+        android:orientation="vertical">
 
-    <io.novafoundation.nova.common.view.AccountInfoView
-        android:id="@+id/accountView"
-        app:accountActionIcon="@drawable/ic_more_vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/x2" />
+        <io.novafoundation.nova.common.view.Toolbar
+            android:id="@+id/receiveToolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:dividerVisible="false"
+            app:homeButtonIcon="@drawable/ic_close"
+            tools:titleText="Receive KSM" />
 
-    <View
-        android:id="@+id/chooseAmountDivider1"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:background="@color/gray3" />
+        <io.novafoundation.nova.common.view.LabeledTextView
+            android:id="@+id/receiveFrom"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            app:actionIcon="@drawable/ic_more_vertical"
+            tools:label="Kusama" />
 
-    <TextView
-        style="@style/TextAppearance.AppCompat.Body1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:drawableStart="@drawable/ic_info_grey_24"
-        android:drawablePadding="8dp"
-        android:gravity="center_vertical"
-        android:text="@string/wallet_receive_description"
-        android:textColor="@color/white" />
+        <TextView
+            style="@style/TextAppearance.NovaFoundation.SubHeadline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="48dp"
+            android:text="@string/wallet_receive_description_v_2_2_0"
+            android:textColor="@color/white" />
 
-    <ImageView
-        android:id="@+id/qrImg"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="48dp"
-        android:layout_marginEnd="48dp"
-        android:scaleType="centerInside" />
+        <ImageView
+            android:id="@+id/receiveQrCode"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="48dp"
+            android:layout_marginTop="24dp"
+            android:padding="8dp"
+            android:layout_marginEnd="48dp"
+            android:adjustViewBounds="true"
+            android:scaleType="centerInside"
+            tools:layout_height="315dp"
+            tools:layout_width="315dp" />
 
-</LinearLayout>
+        <io.novafoundation.nova.common.view.PrimaryButton
+            android:id="@+id/receiveShare"
+            style="@style/Widget.Nova.Button.Primary"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="48dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginEnd="48dp"
+            android:text="@string/wallet_receive_share_qr" />
+    </LinearLayout>
+</ScrollView>
