--- a/common/src/main/res/values/attrs.xml
+++ b/common/src/main/res/values/attrs.xml
@@ -2,6 +2,7 @@
 <resources>
 
     <!--fonts-->
+    <attr name="fontExtraLight" format="reference" />
     <attr name="fontSemiBold" format="reference" />
     <attr name="fontBold" format="reference" />
     <attr name="fontExtraBold" format="reference" />
