--- a/feature-account-impl/src/main/res/drawable/ic_pincode_indicator_empty.xml
+++ b/feature-account-impl/src/main/res/drawable/ic_pincode_indicator_empty.xml
@@ -2,10 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
 
-    <stroke
-        android:width="@dimen/dot_stroke_width"
-        android:color="@color/white" />
-
-    <solid android:color="@android:color/transparent" />
+    <solid android:color="@color/white_16" />
 
 </shape>
