--- a/feature-account-impl/src/main/res/layout/pincode_view.xml
+++ b/feature-account-impl/src/main/res/layout/pincode_view.xml
@@ -8,12 +8,13 @@
 
     <TextView
         android:id="@+id/pinCodeTitleTv"
+        style="@style/TextAppearance.NovaFoundation.Regular.Title3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginStart="@dimen/x1"
         android:layout_marginEnd="@dimen/x1"
-        android:text="@string/pincode_enter_pin_code" />
+        android:text="@string/pincode_enter_pin_code_v2_2_0" />
 
     <io.novafoundation.nova.feature_account_impl.presentation.pincode.view.DotsProgressView
         android:id="@+id/dotsProgressView"
@@ -26,10 +27,10 @@
         android:gravity="center_horizontal" />
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="92dp"
         android:orientation="vertical"
-        android:layout_marginTop="48dp"
         android:padding="8dp">
 
         <LinearLayout
@@ -41,24 +42,18 @@
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn1"
                 style="@style/Widget.Nova.Button.PinCodeNumberButton"
-                android:layout_width="64dp"
-                android:layout_height="64dp"
                 android:layout_margin="@dimen/pin_code_view_spacing"
                 android:text="1" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn2"
                 style="@style/Widget.Nova.Button.PinCodeNumberButton"
-                android:layout_width="64dp"
-                android:layout_height="64dp"
                 android:layout_margin="@dimen/pin_code_view_spacing"
                 android:text="2" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn3"
                 style="@style/Widget.Nova.Button.PinCodeNumberButton"
-                android:layout_width="64dp"
-                android:layout_height="64dp"
                 android:layout_margin="@dimen/pin_code_view_spacing"
                 android:text="3" />
 
@@ -73,24 +68,18 @@
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn4"
                 style="@style/Widget.Nova.Button.PinCodeNumberButton"
-                android:layout_width="64dp"
-                android:layout_height="64dp"
                 android:layout_margin="@dimen/pin_code_view_spacing"
                 android:text="4" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn5"
                 style="@style/Widget.Nova.Button.PinCodeNumberButton"
-                android:layout_width="64dp"
-                android:layout_height="64dp"
                 android:layout_margin="@dimen/pin_code_view_spacing"
                 android:text="5" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn6"
                 style="@style/Widget.Nova.Button.PinCodeNumberButton"
-                android:layout_width="64dp"
-                android:layout_height="64dp"
                 android:layout_margin="@dimen/pin_code_view_spacing"
                 android:text="6" />
 
@@ -105,24 +94,18 @@
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn7"
                 style="@style/Widget.Nova.Button.PinCodeNumberButton"
-                android:layout_width="64dp"
-                android:layout_height="64dp"
                 android:layout_margin="@dimen/pin_code_view_spacing"
                 android:text="7" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn8"
                 style="@style/Widget.Nova.Button.PinCodeNumberButton"
-                android:layout_width="64dp"
-                android:layout_height="64dp"
                 android:layout_margin="@dimen/pin_code_view_spacing"
                 android:text="8" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn9"
                 style="@style/Widget.Nova.Button.PinCodeNumberButton"
-                android:layout_width="64dp"
-                android:layout_height="64dp"
                 android:layout_margin="@dimen/pin_code_view_spacing"
                 android:text="9" />
 
@@ -137,8 +120,6 @@
             <androidx.appcompat.widget.AppCompatImageButton
                 android:id="@+id/fingerprintBtn"
                 style="@style/Widget.Nova.Button.PinCodeControlButton"
-                android:layout_width="64dp"
-                android:layout_height="64dp"
                 android:layout_margin="@dimen/pin_code_view_spacing"
                 android:src="@drawable/ic_fingerprint"
                 android:visibility="invisible"
@@ -147,18 +128,15 @@
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn0"
                 style="@style/Widget.Nova.Button.PinCodeNumberButton"
-                android:layout_width="64dp"
-                android:layout_height="64dp"
                 android:layout_margin="@dimen/pin_code_view_spacing"
                 android:text="0" />
 
             <androidx.appcompat.widget.AppCompatImageButton
                 android:id="@+id/btnDelete"
                 style="@style/Widget.Nova.Button.PinCodeControlButton"
-                android:layout_width="64dp"
-                android:layout_height="64dp"
                 android:layout_margin="@dimen/pin_code_view_spacing"
-                android:src="@drawable/ic_delete" />
+                android:src="@drawable/ic_delete"
+                android:tint="@color/color_delete_button" />
 
         </LinearLayout>
 
