--- a/feature-account-impl/src/main/res/values/styles.xml
+++ b/feature-account-impl/src/main/res/values/styles.xml
@@ -2,16 +2,20 @@
 <resources>
     <style name="Widget.Nova.Button.PinCodeNumberButton" parent="Widget.AppCompat.Button">
         <item name="android:textColor">@color/white</item>
-        <item name="android:textSize">25sp</item>
-        <item name="android:background">?attr/selectableItemBackgroundBorderless</item>
+        <item name="android:textSize">32sp</item>
+        <item name="android:background">@drawable/bg_pincode_number_button</item>
         <item name="android:textAppearance">@style/TextAppearance.NovaFoundation.Body2</item>
-        <item name="android:fontFamily">?attr/fontRegular</item>
+        <item name="android:fontFamily">?attr/fontExtraLight</item>
+        <item name="android:layout_width">@dimen/pin_code_number_button_size</item>
+        <item name="android:layout_height">@dimen/pin_code_number_button_size</item>
     </style>
 
     <style name="Widget.Nova.Button.PinCodeControlButton" parent="Widget.AppCompat.ImageButton">
-        <item name="android:background">?attr/selectableItemBackgroundBorderless</item>
+        <item name="android:background">@drawable/bg_pincode_control_button</item>
         <item name="android:scaleType">centerInside</item>
         <item name="android:elevation">2dp</item>
+        <item name="android:layout_width">@dimen/pin_code_number_button_size</item>
+        <item name="android:layout_height">@dimen/pin_code_number_button_size</item>
     </style>
 
     <style name="Widget.Nova.Text.SettingsHeader" parent="TextAppearance.NovaFoundation.Caps">
