--- a/common/src/main/res/values/styles.xml
+++ b/common/src/main/res/values/styles.xml
@@ -17,16 +17,24 @@
         <item name="android:textSize">20sp</item>
     </style>
 
+    <style name="TextAppearance.NovaFoundation.Bold.SubHeadline">
+        <item name="android:textSize">?attr/textSizeSubHeadline</item>
+    </style>
+
     <style name="TextAppearance.NovaFoundation.Footnote" parent="TextAppearance.NovaFoundation.Regular">
         <item name="android:textSize">13sp</item>
     </style>
 
-    <style name="TextAppearance.NovaFoundation.SubHeadline" parent="TextAppearance.NovaFoundation.Regular">
+    <style name="TextAppearance.NovaFoundation.Regular.SubHeadline">
         <item name="android:textSize">?attr/textSizeSubHeadline</item>
     </style>
 
     <style name="TextAppearance.NovaFoundation.Regular" parent="TextAppearance.AppCompat.Title">
         <item name="android:fontFamily">?attr/fontRegular</item>
+    </style>
+
+    <style name="TextAppearance.NovaFoundation.Bold" parent="TextAppearance.AppCompat.Title">
+        <item name="android:fontFamily">?attr/fontBold</item>
     </style>
 
     <style name="TextAppearance.NovaFoundation.Title3" parent="TextAppearance.NovaFoundation.Regular">
@@ -98,6 +106,13 @@
         <item name="android:textSize">?attr/textSizeB1</item>
         <item name="android:fontFamily">?attr/fontBold</item>
         <item name="android:minHeight">52dp</item>
+    </style>
+
+    <style name="Widget.Nova.Button.Iconic">
+        <item name="android:gravity">start|center_vertical</item>
+        <item name="android:paddingStart">24dp</item>
+        <item name="android:paddingEnd">24dp</item>
+        <item name="android:textSize">?attr/textSizeSubHeadline</item>
     </style>
 
     <style name="Widget.Nova.Button.Primary">
