--- a/feature-account-impl/src/main/res/layout/fragment_backup_mnemonic.xml
+++ b/feature-account-impl/src/main/res/layout/fragment_backup_mnemonic.xml
@@ -25,7 +25,7 @@
         android:text="@string/account_backup_mnemonic_title" />
 
     <TextView
-        style="@style/TextAppearance.NovaFoundation.SubHeadline"
+        style="@style/TextAppearance.NovaFoundation.Regular.SubHeadline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
