--- a/feature-account-impl/src/main/res/layout/view_settings_item.xml
+++ b/feature-account-impl/src/main/res/layout/view_settings_item.xml
@@ -21,7 +21,7 @@
 
     <TextView
         android:id="@+id/settingsItemTitle"
-        style="@style/TextAppearance.NovaFoundation.SubHeadline"
+        style="@style/TextAppearance.NovaFoundation.Regular.SubHeadline"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
@@ -35,7 +35,7 @@
 
     <TextView
         android:id="@+id/settingsItemValue"
-        style="@style/TextAppearance.NovaFoundation.SubHeadline"
+        style="@style/TextAppearance.NovaFoundation.Regular.SubHeadline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
