--- a/feature-wallet-impl/src/main/res/layout/fragment_receive.xml
+++ b/feature-wallet-impl/src/main/res/layout/fragment_receive.xml
@@ -31,7 +31,7 @@
             tools:label="Kusama" />
 
         <TextView
-            style="@style/TextAppearance.NovaFoundation.SubHeadline"
+            style="@style/TextAppearance.NovaFoundation.Regular.SubHeadline"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
