--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -275,7 +275,30 @@
         android:id="@+id/accountDetailsFragment"
         android:name="io.novafoundation.nova.feature_account_impl.presentation.account.details.AccountDetailsFragment"
         android:label="AccountDetailsFragment"
-        tools:layout="@layout/fragment_account_details" />
+        tools:layout="@layout/fragment_account_details">
+
+
+        <action
+            app:enterAnim="@anim/fragment_open_enter"
+            app:exitAnim="@anim/fragment_open_exit"
+            app:popEnterAnim="@anim/fragment_close_enter"
+            app:popExitAnim="@anim/fragment_close_exit"
+            android:id="@+id/action_accountDetailsFragment_to_mnemonic_nav_graph"
+            app:destination="@id/mnemonic_nav_graph" />
+
+
+        <action
+            app:enterAnim="@anim/fragment_open_enter"
+            app:exitAnim="@anim/fragment_open_exit"
+            app:popEnterAnim="@anim/fragment_close_enter"
+            app:popExitAnim="@anim/fragment_close_exit"
+            android:id="@+id/action_accountDetailsFragment_to_import_nav_graph"
+            app:destination="@id/import_nav_graph" />
+    </fragment>
+
+    <include app:graph="@navigation/mnemonic_nav_graph" />
+
+    <include app:graph="@navigation/import_nav_graph" />
 
     <fragment
         android:id="@+id/editAccountsFragment"
