--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -414,6 +414,21 @@
     </fragment>
 
     <fragment
+        android:id="@+id/advancedEncryptionFragment"
+        tools:layout="@layout/fragment_advanced_encryption"
+        android:name="io.novafoundation.nova.feature_account_impl.presentation.account.advancedEncryption.AdvancedEncryptionFragment"
+        android:label="AdvancedEncryptionFragment" />
+
+    <action
+        android:id="@+id/action_open_advancedEncryptionFragment"
+        app:destination="@+id/advancedEncryptionFragment"
+        app:enterAnim="@anim/fragment_open_enter"
+        app:exitAnim="@anim/fragment_open_exit"
+        app:popEnterAnim="@anim/fragment_close_enter"
+        app:popExitAnim="@anim/fragment_close_exit" />
+
+
+    <fragment
         android:id="@+id/exportMnemonicFragment"
         android:name="io.novafoundation.nova.feature_account_impl.presentation.exporting.mnemonic.ExportMnemonicFragment"
         android:label="ExportMnemonicFragment"
