--- a/feature-account-impl/src/main/res/layout/fragment_export_seed.xml
+++ b/feature-account-impl/src/main/res/layout/fragment_export_seed.xml
@@ -11,59 +11,84 @@
     <io.novafoundation.nova.common.view.Toolbar
         android:id="@+id/exportSeedToolbar"
         android:layout_width="match_parent"
+        app:iconRight="@drawable/ic_options"
+        app:dividerVisible="false"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        style="@style/TextAppearance.NovaFoundation.Header2"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:titleText="Export account" />
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:text="@string/account_backup_secret_title" />
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginBottom="24dp"
-        android:layout_weight="1">
+    <TextView
+        style="@style/TextAppearance.NovaFoundation.Regular.SubHeadline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:text="@string/account_create_details"
+        android:textColor="@color/black1" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <io.novafoundation.nova.common.view.LabeledTextView
-                android:id="@+id/exportSeedType"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="16dp"
-                app:enabled="false"
-                app:label="@string/recovery_source_type"
-                app:message="@string/recovery_raw_seed" />
-
-            <io.novafoundation.nova.common.view.LabeledTextView
-                android:id="@+id/exportSeedValue"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="16dp"
-                android:minHeight="156dp"
-                android:singleLine="false"
-                app:enabled="false"
-                app:label="@string/recovery_raw_seed"
-                tools:message="0x1aa03512d3bba4997b499521504d36b81dfa28628a3a0bc10a13f2eb0b3e910b" />
-
-            <io.novafoundation.nova.feature_account_impl.presentation.view.advanced.AdvancedBlockView
-                android:id="@+id/exportSeedAdvanced"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
-    </ScrollView>
-
-    <io.novafoundation.nova.common.view.PrimaryButton
-        android:id="@+id/exportSeedExport"
-        style="@style/Widget.Nova.Button.Primary"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/exportSeedContentContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="24dp"
-        android:visibility="gone"
-        android:text="@string/account_export_action" />
+        android:layout_marginTop="16dp"
+        tools:background="@color/white_16">
+
+        <TextView
+            android:id="@+id/exportSeedTitle"
+            style="@style/TextAppearance.NovaFoundation.Body2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:text="@string/recovery_raw_seed"
+            android:textColor="@color/black1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/exportSeedHexSymbols"
+            style="@style/TextAppearance.NovaFoundation.Body2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
+            android:text="@string/account_seed_hex_symbols"
+            android:textColor="@color/black2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            app:layout_constraintTop_toBottomOf="@id/exportSeedTitle"
+            app:layout_constraintStart_toStartOf="@id/exportSeedTitle"
+            app:layout_constraintEnd_toEndOf="@id/exportSeedHexSymbols"
+            android:layout_width="0dp"
+            android:id="@+id/exportSeedValue"
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="17dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_height="wrap_content"
+            style="@style/TextAppearance.NovaFoundation.Body1"
+            tools:text="0x3a603512d3bba4939481389139b499521504d36b82834819af"
+            android:textColor="@color/white" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <TextView
+        style="@style/TextAppearance.NovaFoundation.Caption1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:text="@string/account_backup_secret_caption"
+        android:textColor="@color/black1" />
 </LinearLayout>
