Redesign json password screen

--- a/feature-account-impl/src/main/res/layout/fragment_export_json_password.xml
+++ b/feature-account-impl/src/main/res/layout/fragment_export_json_password.xml
@@ -11,53 +11,27 @@
     <io.novafoundation.nova.common.view.Toolbar
         android:id="@+id/exportJsonPasswordToolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:titleText="@string/account_export" />
+        app:dividerVisible="false"
+        android:layout_height="wrap_content" />
 
-    <io.novafoundation.nova.common.view.LabeledTextView
-        android:layout_width="match_parent"
+    <TextView
+        style="@style/TextAppearance.NovaFoundation.Header2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:text="@string/account_export_json_password_title" />
+
+    <TextView
+        style="@style/TextAppearance.NovaFoundation.Regular.SubHeadline"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
-        app:enabled="false"
-        app:label="@string/recovery_source_type"
-        app:message="@string/recovery_json" />
-
-    <io.novafoundation.nova.common.view.LabeledTextView
-        android:id="@+id/exportJsonPasswordNetworkInput"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        app:actionIcon="@drawable/ic_pin_white_24"
-        app:label="@string/common_choose_network"
-        app:enabled="false"
-        tools:message="Kusama"
-        tools:textIcon="@drawable/ic_ksm_24" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:orientation="horizontal"
-        android:paddingStart="16dp"
-        android:paddingEnd="48dp">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_alert_triangle_yellow_24" />
-
-        <TextView
-            style="@style/TextAppearance.NovaFoundation.Body1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:text="@string/export_json_password_explanation"
-            android:textColor="@color/gray1" />
-    </LinearLayout>
+        android:text="@string/account_export_json_password_subtitle"
+        android:textColor="@color/black1" />
 
     <io.novafoundation.nova.common.view.InputField
         style="@style/Widget.Nova.Input.Primary.External"
@@ -82,19 +56,6 @@
         android:hint="@string/export_json_password_confirm"
         app:passwordToggleEnabled="true"
         app:passwordToggleTint="@color/white" />
-
-    <TextView
-        android:id="@+id/exportJsonPasswordMatchingError"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:drawableStart="@drawable/ic_red_cross"
-        android:visibility="invisible"
-        tools:visibility="visible"
-        android:gravity="center_vertical"
-        android:includeFontPadding="false"
-        android:text="@string/export_json_password_match_error" />
 
     <Space
         android:layout_width="match_parent"
