--- a/app/src/main/res/menu/bottom_navigations.xml
+++ b/app/src/main/res/menu/bottom_navigations.xml
@@ -5,28 +5,28 @@
     <item
         android:id="@+id/walletFragment"
         android:enabled="true"
-        android:icon="@drawable/ic_wallet_24"
-        android:title="@string/tabbar_wallet_title"
+        android:icon="@drawable/bottom_assets"
+        android:title="@string/wallet_assets"
         app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/crowdloanFragment"
         android:enabled="true"
-        android:icon="@drawable/ic_various_rocket"
+        android:icon="@drawable/bottom_crodwloans"
         android:title="@string/crowdloan_crowdloan"
         app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/stakingFragment"
         android:enabled="true"
-        android:icon="@drawable/ic_stacking_24"
+        android:icon="@drawable/bottom_staking"
         android:title="@string/tabbar_staking_title"
         app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/profileFragment"
         android:enabled="true"
-        android:icon="@drawable/ic_settings"
+        android:icon="@drawable/bottom_settings"
         android:title="@string/profile_settings_title"
         app:showAsAction="ifRoom" />
 </menu>
