--- a/common/src/main/res/values/colors.xml
+++ b/common/src/main/res/values/colors.xml
@@ -25,13 +25,16 @@
     <color name="white_10">#1AFFFFFF</color>
     <color name="white_16">#29FFFFFF</color>
     <color name="white_20">#33FFFFFF</color>
+    <color name="white_24">#3DFFFFFF</color>
     <color name="white_30">#4DFFFFFF</color>
     <color name="white_32">#52FFFFFF</color>
-    <color name="white_24">#3DFFFFFF</color>
     <color name="white_40">#66FFFFFF</color>
     <color name="white_48">#7AFFFFFF</color>
     <color name="white_50">#80FFFFFF</color>
     <color name="white_64">#A6FFFFFF</color>
+
+    <color name="black_24">#3D000000</color>
+    <color name="black_48">#7A000000</color>
 
     <color name="black1">@color/gray1</color>
     <color name="black2">@color/gray2</color>
