--- a/feature-wallet-impl/src/main/res/layout/fragment_balance_list.xml
+++ b/feature-wallet-impl/src/main/res/layout/fragment_balance_list.xml
@@ -18,7 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="18dp"
             android:includeFontPadding="false"
             tools:text="@tools:sample/full_names"
             app:layout_constraintStart_toStartOf="parent"
@@ -44,10 +44,10 @@
             android:layout_width="@dimen/avatar_size"
             android:layout_height="@dimen/avatar_size"
             android:layout_marginEnd="16dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="25dp"
             android:src="@color/white"
-            app:layout_constraintBottom_toBottomOf="@+id/balanceListTotalAmount"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/balanceListTotalTitle" />
+            app:layout_constraintEnd_toEndOf="parent" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/balanceListAssets"
